<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >
    <data>
        <variable
            name="viewModel"
            type="com.emptydev.verba.editwords.EditWordsViewModel" />
    </data>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".editwords.EditWordsFragment">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/primary_words"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:hint="@string/learning_language"
            app:layout_constraintBottom_toTopOf="@+id/translate_language"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/set_name_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/primary_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="true"
                android:gravity="left|top" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/translate_language"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:hint="@string/translation_into_your_language"
            app:layout_constraintBottom_toTopOf="@+id/btn_show_mistakes"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/primary_words">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/translated_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="true"
                android:gravity="left|top"

                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:clickable="true"
            style="@style/VerbaFab"
            android:onClick="@{()->viewModel.onSaveSet()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_play"

            />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/StandartText"
            app:layout_constraintBottom_toBottomOf="@+id/set_name_layout"
            app:layout_constraintEnd_toEndOf="@+id/set_name_layout"
            app:layout_constraintStart_toStartOf="@+id/set_name_layout"
            app:layout_constraintTop_toTopOf="@+id/set_name_layout"
            tools:text="WordList" />

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:background="@drawable/bg_buttoncircle"
            android:padding="5dp"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="@+id/set_name_layout"
            app:layout_constraintStart_toEndOf="@+id/set_name_layout"
            app:layout_constraintTop_toTopOf="@+id/set_name_layout"
            app:srcCompat="@drawable/ic_edit"
            android:onClick="@{()->viewModel.onEditSetName()}"
            />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/set_name_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="Set name"
            android:inputType="textPersonName"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_words_name"
                style="@style/StandartText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="true"
                android:ems="10"

                />

        </com.google.android.material.textfield.TextInputLayout>

        <Switch
            android:id="@+id/switch_revers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/revers"
            app:layout_constraintEnd_toStartOf="@+id/fab_play"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_show_mistakes" />

        <Switch
            android:id="@+id/sw_last_mistake"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/run_last_mistakes"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/switch_revers"
            app:layout_constraintTop_toBottomOf="@+id/switch_revers" />

        <ImageButton
            android:id="@+id/btn_show_mistakes"
            android:layout_width="@dimen/btn_mistake_size"
            android:layout_height="@dimen/btn_mistake_size"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/bg_buttoncircle"
            android:onClick="@{()->viewModel.showLastMistakes()}"
            android:padding="5dp"
            android:scaleType="fitXY"
            android:src="@drawable/mistake"
            android:text="@string/show_last_mistakes"
            app:layout_constraintBottom_toTopOf="@+id/fab_play"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/translate_language" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
</layout>
